--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,9 @@
-<h2>{{app.messageHome}}</h2>
+<h2>{{home.message}}</h2>
 
-<input type="text" ng-model="app.changed">
-<button ng-click="app.handleMessage(app.changed)">Handle</button>
+<input type="text" ng-model="home.changed">
+<button ng-click="home.handleMessage(home.changed)">Handle</button>
 
-<input type="text" ng-model="user">
+<!-- <input type="text" ng-model="user"> -->
+<!-- routeParams for /{{user}} route -->
 
-<a ng-href="#/about/{{user}}">About Page</a>
+<a ng-href="#/about">About Page</a>
