updating with ngAnimate

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 
 <!-- <input type="text" ng-model="user"> -->
 <!-- routeParams for /{{user}} route -->
-<section ng-show="home.madLibForm">
+<section class="animated" ng-hide="home.madLibForm">
   <h2>Mad Lib Finished</h2>
   <p>Hello everyone when the {{home.changed}} and the awesome {{home.awesome}}.</p>
   <p>Cool this guys was {{home.cool}} and he said {{home.yea}}</p>
